Fix Windows console build, work around kryo issues
Fix missing Java options in console build for Windows (which meant OpenSlide couldn't be loaded).

Avoid memoization errors with --add-opens, see https://github.com/ome/bioformats/issues/3659
Note that reflection may cause more problems with kryo/gson/groovy (possibly).