@@ -764,6 +764,18 @@ task createPackage(dependsOn:createRuntime, type:Exec) {
     	logger.info("No package type specified, using default ${packageType}")
    	}
    	boolean associateFiles = packageType != 'app-image'
+    
+    // Set up the main Java options
+    def javaOptions = []
+    
+    // Default to using 50% available memory
+    javaOptions << '-XX:MaxRAMPercentage=50'
+    
+    // Set the library path to the app directory, for loading native libraries
+   	javaOptions << '-Djava.library.path=$APPDIR'		
+
+    // Temp workaround for kyro and Bio-Formats memoization - see https://github.com/ome/bioformats/issues/3659
+   	javaOptions << '--add-opens=java.base/java.util.regex=ALL-UNNAMED'		
 
     def params = ["${jdkHome}/bin/jpackage"]
 
@@ -777,9 +789,6 @@ task createPackage(dependsOn:createRuntime, type:Exec) {
     String versionedLauncherName = 'QuPath-' + qupathVersion
     String launcherName = 'QuPath'
 //    params << '--name' << 'QuPath-' + qupathVersion
-
-    // Default to using 50% available memory
-	params << '--java-options' << '-XX:MaxRAMPercentage=50'
 
 	if (OperatingSystem.current().isMacOsX()) {
 		params << '--mac-package-name' << 'QuPath'
@@ -813,20 +822,22 @@ task createPackage(dependsOn:createRuntime, type:Exec) {
 		def consoleLauncherName = launcherName + " (console)"
 		fileTemp.deleteOnExit()
 		fileTemp.text = 'win-console=true'
-		fileTemp << System.lineSeparator() << 'java-options=' << '-XX:MaxRAMPercentage=50' << ' -Dqupath.config=console'
-//		fileTemp << System.lineSeparator() << 'java-options=' << '-Dqupath.config=console'
+		fileTemp << System.lineSeparator()
+    fileTemp << 'java-options=' << '-Dqupath.config=console' << String.join(" ", javaOptions) << System.lineSeparator()
 		params << '--add-launcher' << "\"${consoleLauncherName}\"=\"${fileTemp.getAbsolutePath()}\""
 	} else
 		params << '--type' << packageType
 
-
     params << '--name' << launcherName
+    
+    // Add the java options
+    for (opt in javaOptions)
+      params << '--java-options' << opt
 	
     // Store the app version (typically a simplified version of the full format)
     if (appVersion)
 	    params << '--app-version' << appVersion
 
-	params << '--java-options' << '-Djava.library.path=$APPDIR'		
         
     // Try to find the icon
     def pathIcon = Paths.get(
